k8s/nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taskflow-route
  namespace: taskflow
spec:
  parentRefs:
    - name: taskflow-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: taskflow-backend-service
          port: 5001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: taskflow-frontend-service
          port: 80
