k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-alb
  namespace: nginx-gateway
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: taskflow.learnops.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ngf-nginx-gateway-fabric
                port:
                  number: 80
